day2-training/demo/03-ingress-routing/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-app
  labels:
    app: ingress-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-app
  template:
    metadata:
      labels:
        app: ingress-app
    spec:
      containers:
      - name: web
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: html-volume
        configMap:
          name: ingress-demo-html
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  type: ClusterIP # Ingress standardly points to ClusterIP
  selector:
    app: ingress-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
